Discussion for communication between client and API

--- a/doc/pv/20260225.md
+++ b/doc/pv/20260225.md
@@ -18,3 +18,29 @@ PV of the 25th February 2026
 ## PV
 
 ...
+
+Request from the client to the server:
+
+```json
+request: text
+```
+
+Response from the server:
+
+```json
+response: {
+  summaries : [
+    {
+      flash: string,
+      present: boolean
+    },
+  ],
+  ai : [
+    {
+      Question: string,
+      Response: string
+    }
+  ],
+  riskLevel: string
+}
+```
